fixed findbugs issues